# SFML-Chess-Engine-CPP

./: CMakeLists.txt  README.md
include/: Board.h  Game.h  Piece.h
src/: Board.cpp  Game.cpp  Piece.cpp  main.cpp
